2001-01-23  Glynn Foster <glynn.foster@sun.com>

	* logos/*.gif: logos
	* index.html: Added logos to the main page as 
	provided by Dan.

2001-12-08  Glynn Foster <glynn.foster@sun.com>

	* board_of_directors-2000.html:
	* board_of_directors.html:
	* index.html:

	Add details of new official board members.

2001-12-07  Glynn Foster <glynn.foster@sun.com>

	* press/pr-accessible.html:
	* press/pr-borlandjoins.html:
	* press/pr-foundation.html:
	* press/pr-gnome14.html:
	* press/pr-mandrakesoftjoins.html:
	* press/pr-newcommitments.html:
	* press/pr-ney_execdir.html:
	* press/pr-redflagjoins.html:
	* press/pr-redhat.html:
	* press/pr-sunjoins.html:
	
	Fix links. Thanks to Andreas J. Guelzow for 
	pointing this out.

2001-12-02  Glynn Foster <glynn.foster@sun.com>

	* advisory_board.html: s/TurboLinu/TurboLinux
	Thanks to Nicholas Bachmann for pointing this 
	out.

2001-11-20  Gregory Leblanc  <gleblanc@linuxweasel.com>

	* index.html: Fixed the election dates on the main page.

2001-11-20  Glynn Foster  <glynn.foster@sun.com>

	* ballot-summary.html: Revised order to reflect
	the order on the ballots that are being sent out
	Nov 20th. ie. alphabetical

2001-11-17  Glynn Foster  <glynn.foster@sun.com>

	* electionrules.html: Fix election rules to 
	reflect new dates.

2001-11-15  Dan Mueth  <d-mueth@uchicago.edu>

	Updating navigation links for new press stuff.

	* advisory_board.html:
	* ballot-summary.html:
	* ballot_summary.html:
	* board_of_directors.html:
	* charter.html:
	* directory.html:
	* documentation.html:
	* election-2000.html:
	* electionrules.html:
	* elections.html:
	* executive_director.html:
	* faq-ln7.html:
	* faq.html:
	* index.html:
	* membership-form.html:
	* membership-policy.html:
	* membership.html:
	* organization.html:
	* overview.html:
	* template.html:

	Adding press release info.

	* press.html:
	* press/pr-accessible.html:
	* press/pr-borlandjoins.html:
	* press/pr-foundation.html:
	* press/pr-gnome14.html: