@@ -43,6 +43,13 @@
       <p>
       <table border="0" width="90%" align="center" cellpadding=3 cellspacing=3>
 
+       <tr>
+        <td>January 28, 2002</td>
+        <td><a href="press/pr-assistivetech.html">Users with Disabilities Get 
+        Built-in Assistive Technology Solutions with the GNOME 2.0 Desktop</a></td>
+       </tr>
+
+       <tr>
         <td>August 28, 2001</td>
         <td><a href="press/pr-accessible.html">Making GNOME Accessible --
         Opening New Doors At the Workplace for Users with Disabilities</a></td>
