@@ -1,0 +1,234 @@
+<!doctype html public "-//w3c//dtd html 4.0 transitional//en">
+<html>
+ <head>
+  <title>The GNOME Foundation: Membership Policy</title>
+ </head>
+ <body bgcolor="#FFFFFF">
+  <center>
+   <table BORDER=2 CELLPADDING=5 WIDTH="595" NOSAVE >
+    <tr VALIGN=TOP NOSAVE>
+     <td VALIGN=TOP NOSAVE>
+      <center>
+       <a href="http://www.gnome.org">
+       <img SRC="../gnome.jpg" ALT="" height=250 width=198 border=0></a><img
+       SRC="../text.png" ALT="The GNOME Foundation" height=198 width=354>
+      </center>
+     </td>
+    </tr>
+
+    <tr>
+     <td>
+      <center>
+       <a href="../index.html">Home</a> :&nbsp;
+       Press :&nbsp;
+       <a href="../organization.html">Organization</a> :&nbsp;
+       <a href="../documentation.html">Documentation</a> :&nbsp;
+       <a href="../membership.html">Membership</a> :&nbsp;
+       <a href="../elections.html">Elections</a> :&nbsp;
+       <a href="../directory.html">Directory</a>
+      </center>
+      <br>
+      <center>
+       <a href="../press.html">[Other Press Releases]</a>
+      </center>
+     </td>
+    </tr>
+
+    <!-- End of Boilerplate -->
+
+    <tr>
+     <td>
+
+      <br>
+      <h3 align="center">Users with Disabilities Get Built-in Assistive Technology Solutions with the GNOME 2.0 Desktop</h3>
+
+<P>
+<B>New developments make the GNOME 2.0 Desktop more accessible to the needs
+of users with disabilities.</B>
+
+<P>
+New York, N.Y. January 28, 2002 - The GNOME Foundation today announced
+the latest innovative assistive technology contributions to the GNOME
+project, an open-source, free-software desktop for GNU/Linux and UNIX.
+BAUM Retec AG delivers the first full-featured GNOME screen magnifier, a
+screen reader, and a set of Braille drivers to meet the needs of
+vision-impaired users and the Adaptive Technology Resource Centre,
+University of Toronto is delivering the first GNOME on-screen keyboard
+to support users with motor impairments. These built-in assistive
+technologies seamlessly integrate with a new generation of accessible
+applications as they enable users with disabilities to easily interact
+with applications that can adapt to their needs.
+
+<P>
+These new assistive technologies leverage Sun Microsystems, Inc.'s
+contribution of the GNOME Accessibility Framework. This framework based
+on an open architecture, provides a comprehensive toolkit and APIs, that
+developers can use to create accessible applications and interface them
+with assistive technologies on any UNIX or GNU/Linux platform running
+the GNOME 2.0 desktop. With the combination of the Accessibility
+Framework and assistive technologies, users with disabilities have the
+solutions they need to get their job done efficiently:
+
+
+<UL>
+ <LI>
+Screen Magnifier - enables users with low vision to enlarge the
+computer screen and interact with the magnified portion of the screen
+they are accessing, such as menus, toolbars, graphics, and text
+ </LI>
+ <LI>
+Screen Reader - allows users who are blind or visually impaired
+to access information on the computer screen through a Braille display
+or synthesized speech. With screen readers users can read and edit text,
+manipulate menu bars, buttons and dialog boxes, and fully interact with
+the GNOME desktop
+ </LI>
+ <LI>
+On-screen Keyboard - provides users with physical impairments a
+wide variety of ways to enter text and manipulate the graphical user
+interface of applications and the GNOME desktop. In addition,
+environments without a keyboard, such as a touch screen kiosk, can take
+advantage of the on-screen keyboard. This on-screen keyboard goes beyond
+the standard physical keyboard, it supports word prediction, scanning
+access, coded access, customizable keyboard layouts, and dynamic
+keyboard functionality that conveniently places menu bar options and
+other application elements onto the keyboard display for direct
+manipulation
+ </LI>
+</UL>
+<P>
+"Integrating accessibility technology solutions with the GNOME desktop
+allows anyone to use GNOME," said Miguel de Icaza, GNOME Foundation
+President. These built-in capabilities provide enterprises with a
+ready-to-go and comprehensive accessible desktop that adapts to the
+needs of users with disabilities. The benefits are vast - for IT
+organizations this cost-effective alternative resolves the problem of
+buying and installing expensive complex software; for disabled users
+it's simpler and more convenient to work and collaborate with team
+members since they have the advantage of using any UNIX or GNU/Linux
+platform running the GNOME 2.0 desktop".
+
+<P>
+"We chose GNOME because of its open, extensible, and comprehensive
+accessibility architecture," said Thomas Friehoff, CTO, head of software
+development of BAUM Retec AG. "Using the open Assistive Technologies
+Service Provider API we were able to deliver our solutions quickly,
+because it eliminated the need to reinvent assistive technology software
+for different UNIX platforms, saving us time and costs".
+
+<P>
+"Our center in Toronto specializes in developing information
+technologies that include seamless accessible interfaces," said Jutta
+Treviranus, Director, Adaptive Technology Resource Centre, University of
+Toronto. "The GNOME Accessibility Framework free software project
+enables us to leverage the component-based architecture to develop
+technologies that intelligently integrate alternative access techniques.
+Using this approach we will make the user interface accessible and
+usable by the large group of individuals who cannot use a standard
+keyboard or mouse. We will continue working with the GNOME open source
+project to develop new kinds of user input support, including an open
+source keyboard configuration editor that provides ways to improve the
+efficiency of computer interaction for users with disabilities."
+
+<P>
+"By providing rich and consistent interfaces for both assistive
+technologies and applications, the accessibility framework enables
+flexible and comprehensive accessibility solutions for GNOME," said Bill
+Haneman, GNOME Accessibility Architect, Sun Microsystems, Inc. "A key
+aspect of the GNOME Accessibility Framework is support for user
+interface component sets beyond the built-in GNOME component set," said
+Peter Korn, Sun Accessibility Architect. "The thousands of applications
+that take advantage of the Java Accessibility API will work with the
+GNOME Accessibility Framework unaltered and gain the benefit of the
+assistive technologies included with the GNOME 2.0 Desktop. In addition,
+other important applications, such as the OpenOffice.org productivity
+suite, are being modified to use these technologies."
+
+<P>
+<B>Availability</B><BR>
+GNOME Accessibility Framework is available at:
+<a href="http://developer.gnome.org/projects/gap">http://developer.gnome.org/projects/gap</a>
+
+<P>
+Baum Retec AG assistive technologies are available at:
+<a href="http://developer.gnome.org/projects/gap/AT">
+http://developer.gnome.org/projects/gap/AT</a>
+
+<P>
+ATRC, University of Toronto assistive technology is available at:
+<a href="http://developer.gnome.org/projects/gap/AT">
+http://developer.gnome.org/projects/gap/AT</a>
+
+<P>
+<B>About GNOME</B><BR>
+Gnome is a unified, open and rich desktop that employs an intuitive AND
+APPEALING USER INTERFACE, includes a wealth of productivity
+applications,
+SUPPORTS THE LATEST industry STANDARDS, AND PROVIDES AN innovative
+component-based architecture, ALL BUILT ON a powerful network-centric
+architecture.
+GNOME is a free software project (also referred to as open source
+software) that is developing a complete, easy to use desktop for
+GNU/Linux, BSD and a variety of other UNIX and other operating systems.
+The GNOME desktop is used by millions of people around the world. More
+than 500 computer developers, including over 100 full-time, paid
+developers, contribute their time and effort to the project.
+
+<P>
+<B>About the GNOME Foundation</B><BR>
+Comprised of hundreds of volunteer developers and industry-leading
+companies, the GNOME Foundation is an organization committed to
+supporting the advancement of GNOME. GNOME is an entirely free user
+environment for desktops, networked servers and portable Internet
+devices. The modern architecture and design of GNOME includes a
+technically advanced application development platform and a powerful
+end-user desktop environment. Major leading software industry and
+computer manufacturers support the GNOME development effort, which is
+led by a world-wide community of volunteers. More information on GNOME
+is available at <a href="www.gnome.org">www.gnome.org</a>.
+
+<P>
+<B>About BAUM Retec AG</B><BR>
+As a leading European provider of products and services for the blind
+and visually impaired, BAUM Retec AG offers a wide range of electronic
+aids for educational, professional and private use. BAUM's products want
+to help visually impaired customers to be more successful in their jobs
+and to have all the possibilities to access information. More
+information on BAUM Retec AG is available at 
+<a href="www.baum.de">www.baum.de</a>.
+
+<P>
+<B>About Adaptive Technology Resource Centre (ATRC), University of Toronto</B><BR>
+The ATRC advances barrier-free access to information technology by
+working directly with information technology manufacturers and
+developers to influence the early design stages of tomorrow's computer
+based technology. The ATRC uses a user-centered design approach to model
+and create solutions that are commercially feasible, operationally
+effective, and inclusive of users with disabilities. The centre works
+closely with government and public sector partners to address
+accessibility issues. More information on Adaptive Technology Resource
+Centre, University of Toronto is available at 
+<a href="www.utoronto.ca/atrc">www.utoronto.ca/atrc</a>.
+
+<P>
+<B>About Sun Microsystems, Inc.</B><BR>
+Sun, Sun Microsystems, the Sun logo, Solaris, Java are trademarks or
+registered trademarks of Sun Microsystems, Inc. in the United States and
+other countries. More information on Sun Microsystems, Inc. is available
+at <a href="www.sun.com">www.sun.com</a>.
+
+    <!-- Start of Boilerplate -->
+    <tr>
+     <td>
+      <center><font size=-1>This site is maintained by
+      <a href="mailto:membership@gnome.org">the GNOME Foundation Membership and Elections Committee</a>
+      and was designed by <a href="mailto:jpsc@users.sourceforge.net">JP
+      Schnapper-Casteras</a> and <a href="mailto:bart@eazel.com">Bart Decrem</a>.</font></center>
+     </td>
+    </tr>
+   </table>
+  </center>
+
+ </body>
+</html>
+
