@@ -1,3 +1,9 @@
+2001-02-14  Dan Mueth <muet@alumni.uchicago.edu>
+
+	* press.html: Adding link for recent Assistive Technology press release
+	* pr-assistivetech.html: Adding recent press release on assistive 
+	                         technology.
+
 2001-01-23  Glynn Foster <glynn.foster@sun.com>
 
 	* logos/*.gif: logos
